[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies=[
  "botok",
  "collections",
  "matplotlib",
  "numpy",
  "pandas",
  "sentence_transformers",
  "sklearn",
  "textwrap",
  "tqdm",
  "umap"
]

name = "easy_text_clustering"
version = "0.0.1"
authors = [
  { name="billingsmoore", email="billingsmoore@gmail.com" },
]
description = "Low code text clustering for the Tibetan language"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["bowordcountvectorizer"]

[project.urls]
Homepage = "https://github.com/billingsmoore/easy_text_clustering"
Issues = "https://github.com/billingsmoore/easy_text_clustering/issues"