[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies=[
  "botok",
  "matplotlib",
  "numpy",
  "pandas",
  "sentence_transformers",
  "scikit-learn",
  "tqdm",
  "umap-learn"
]

name = "bocluster"
version = "0.1.0"
authors = [
  { name="billingsmoore", email="billingsmoore@gmail.com" },
]
description = "Low code text clustering for the Tibetan language"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bocluster"]

[project.urls]
Homepage = "https://github.com/billingsmoore/bocluster"
Issues = "https://github.com/billingsmoore/bocluster/issues"